calico/manifest-templates/default-tier-policies.yaml
# On upgrading calico Enterprise, from v3.2 or lower  to v3.3 or above. 
# Remove below kubernetes network policies from the cluster.  
# These policies have been converted to calico network policies and organized under `allow-tigera` tier.

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: tigera-elasticsearch
spec:
  podSelector:
    matchLabels: {}

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: tigera-kibana
spec:
  podSelector:
    matchLabels: {}

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: tigera-intrusion-detection
spec:
  podSelector:
    matchLabels: {}

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: tigera-manager
spec:
  podSelector:
    matchLabels: {}

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: tigera-compliance
spec:
  podSelector:
    matchLabels: {}

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: tigera-prometheus
spec:
  podSelector:
    matchLabels: {}

---

# This manifest creates a network policy to allow traffic to Alertmanager
# (TCP port 9093).
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: calico-node-alertmanager
  namespace: tigera-prometheus
spec:
  ingress:
  - ports:
    - port: 9093
      protocol: TCP
  podSelector:
    matchLabels:
      alertmanager: calico-node-alertmanager
      app: alertmanager
---

# This manifest creates a network policy to allow traffic between
# Alertmanagers for HA configuration (TCP port 6783).
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: calico-node-alertmanager-mesh
  namespace: tigera-prometheus
spec:
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - alertmanager
        - key: alertmanager
          operator: In
          values:
          - calico-node-alertmanager
    ports:
    - port: 9094
      protocol: TCP
    - port: 9094
      protocol: UDP
  podSelector:
    matchLabels:
      alertmanager: calico-node-alertmanager
      app: alertmanager
---

# This manifest creates a network policy to allow traffic to access the
# Prometheus (TCP port 9090).
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus
  namespace: tigera-prometheus
spec:
  ingress:
  - ports:
    - port: 9090
      protocol: TCP
  podSelector:
    matchLabels:
      app: prometheus
      prometheus: calico-node-prometheus
